force-app/main/default/objects/ID_Holiday_Search__c/ID_Holiday_Search__c.object-meta.xml
<CustomObject>
    <description>Stores the count for the searches made on an ID number</description>
    <label>ID Holiday Search</label>
    <nameField>
        <label>MyIDHoliday Search Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ID Holiday Searches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>