force-app/main/default/objects/ID_Holiday_Search__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <description>Stores Date of birth based on ID Number. Decoded DOB</description>
    <label>Date of Birth</label>
    <required>true</required>
    <type>Date</type>
</CustomField>