force-app/main/default/objects/ID_Holiday_Search__c/fields/ID_Number__c.field-meta.xml
<CustomField>
    <fullName>ID_Number__c</fullName>
    <description>Store 13 digit RSA ID Number</description>
    <label>ID Number</label>
    <length>13</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>